Fix EdgeDriver path

--- a/wd.html
+++ b/wd.html
@@ -398,7 +398,7 @@ driver = Selenium::WebDriver.for :edge</code>
 <pre>
   <code class=java>System.setProperty("webdriver.edge.driver", "C:/path/to/MicrosoftWebDriver.exe");</code>
   <code class=python>Edge(executable_path='/path/to/MicrosoftWebDriver.exe')</code>
-  <code class=cs>new EdgeDriver("/path/to/geckodriver");</code>
+  <code class=cs>new EdgeDriver("/path/to/MicrosoftWebDriver.exe");</code>
   <code class=ruby>Selenium::WebDriver::Edge.driver_path = "C:\path\to\MicrosoftWebDriver.exe"</code>
 </pre>
 
