Adding initial WebDriver sections

--- a/new_site/404.html
+++ b/new_site/404.html
@@ -4,20 +4,20 @@
 <head>
   <meta charset="utf-8"> <meta name="description" content="Selenium Documentation">
 
- <link rel="icon" href="/docs/new_site/images/favicon.png" type="image/png">
+ <link rel="icon" href="https://seleniumhq.github.io/docs/new_site/images/favicon.png" type="image/png">
  
   <title>404 Page not found</title>
 
    
-    <link href="/docs/new_site/css/nucleus.css?1563503386" rel="stylesheet">
-    <link href="/docs/new_site/css/fontawesome-all.min.css?1563503386" rel="stylesheet">
-    <link href="/docs/new_site/css/hybrid.css?1563503386" rel="stylesheet">
-    <link href="/docs/new_site/css/featherlight.min.css?1563503386" rel="stylesheet">
-    <link href="/docs/new_site/css/perfect-scrollbar.min.css?1563503386" rel="stylesheet">
-    <link href="/docs/new_site/css/theme.css?1563503386" rel="stylesheet">
-    <link href="/docs/new_site/css/hugo-theme.css?1563503386" rel="stylesheet">
+    <link href="https://seleniumhq.github.io/docs/new_site/css/nucleus.css?1563680051" rel="stylesheet">
+    <link href="https://seleniumhq.github.io/docs/new_site/css/fontawesome-all.min.css?1563680051" rel="stylesheet">
+    <link href="https://seleniumhq.github.io/docs/new_site/css/hybrid.css?1563680051" rel="stylesheet">
+    <link href="https://seleniumhq.github.io/docs/new_site/css/featherlight.min.css?1563680051" rel="stylesheet">
+    <link href="https://seleniumhq.github.io/docs/new_site/css/perfect-scrollbar.min.css?1563680051" rel="stylesheet">
+    <link href="https://seleniumhq.github.io/docs/new_site/css/theme.css?1563680051" rel="stylesheet">
+    <link href="https://seleniumhq.github.io/docs/new_site/css/hugo-theme.css?1563680051" rel="stylesheet">
     
-      <link href="/docs/new_site/css/theme-selenium.css?1563503386" rel="stylesheet">
+      <link href="https://seleniumhq.github.io/docs/new_site/css/theme-selenium.css?1563680051" rel="stylesheet">
     
 <style>
     :root #header + #content > #left > #rlblock_left {
@@ -48,8 +48,8 @@
           </p>
           <p>Woops. Looks like this page doesn&#39;t exist ¯\_(ツ)_/¯.</p>
           <p></p>
-          <p><a href='/docs/new_site'>Go to homepage</a></p>
-          <p><img src='/docs/new_site/images/gopher-404.jpg' style="width:50%" alt="Page not found!"></p>
+          <p><a href='https://seleniumhq.github.io/docs/new_site/'>Go to homepage</a></p>
+          <p><img src='https://seleniumhq.github.io/docs/new_site/images/gopher-404.jpg' style="width:50%" alt="Page not found!"></p>
         </div>
       </div>
 
