--- a/intro.html
+++ b/intro.html
@@ -267,6 +267,18 @@ User user = UserFactory.createCommonUser(); //This method is defined elsewhere.
 // AccountPage object is returned by the loginAs method, allowing you to then
 // perform actions from the AccountPage.
 AccountPage accountPage = loginAs(user.getEmail(), user.getPassword());</code>
+<code class=cs>// Create a user who has read-only permissions--they can configure a unicorn,
+  // but they do not have payment information set up, nor do they have
+  // administrative privileges. At the time the user is created, its email
+  // address and password are randomly generated--you don't even need to
+  // know them.
+  User user = UserFactory.CreateCommonUser(); //This method is defined elsewhere.
+  
+  // Log in as this user.
+  // Logging in on this site takes you to your personal "My Account" page, so the
+  // AccountPage object is returned by the LoginAs method, allowing you to then
+  // perform actions from the AccountPage.
+  AccountPage accountPage = LoginAs(user.GetEmail(), user.GetPassword());</code>
 <code class=python># Create a user who has read-only permissions--they can configure a unicorn,
 # but they do not have payment information set up, nor do they have
 # administrative privileges. At the time the user is created, its email
@@ -325,6 +337,20 @@ AddUnicornPage addUnicornPage = accountPage.addUnicorn();
 // its createUnicorn() method. This method will take Sparkles' attributes,
 // fill out the form, and click submit.
 UnicornConfirmationPage unicornConfirmationPage = addUnicornPage.createUnicorn(sparkles);</code>
+<code class=cs>// The Unicorn is a top-level Object--it has attributes, which are set here. 
+  // This only stores the values; it does not fill out any web forms or interact
+  // with the browser in any way.
+  Unicorn sparkles = new Unicorn("Sparkles", UnicornColors.PURPLE, UnicornAccessories.SUNGLASSES, UnicornAdornments.STAR_TATTOOS);
+  
+  // Since we're already "on" the account page, we have to use it to get to the
+  // actual place where you configure unicorns. Calling the "Add Unicorn" method
+  // takes us there.
+  AddUnicornPage addUnicornPage = accountPage.AddUnicorn();
+  
+  // Now that we're on the AddUnicornPage, we will pass the "sparkles" object to
+  // its createUnicorn() method. This method will take Sparkles' attributes,
+  // fill out the form, and click submit.
+  UnicornConfirmationPage unicornConfirmationPage = addUnicornPage.CreateUnicorn(sparkles);</code>
 <code class=python># The Unicorn is a top-level Object--it has attributes, which are set here.
 # This only stores the values; it does not fill out any web forms or interact
 # with the browser in any way.
@@ -344,9 +370,13 @@ unicorn_confirmation_page = add_unicorn_page.create_unicorn(sparkles)</code></pr
  you need to move on to step 3: making sure it actually worked.
 
 <pre><code class=java>// The exists() method from UnicornConfirmationPage will take the Sparkles 
-// object--a specification of the attributes you want to see, and compare
-// them with the fields on the page.
-Assert.assertTrue("Sparkles should have been created, with all attributes intact", unicornConfirmationPage.exists(sparkles));</code>
+  // object--a specification of the attributes you want to see, and compare
+  // them with the fields on the page.
+  Assert.assertTrue("Sparkles should have been created, with all attributes intact", unicornConfirmationPage.exists(sparkles));</code>
+  <code class=cs>// The exists() method from UnicornConfirmationPage will take the Sparkles 
+    // object--a specification of the attributes you want to see, and compare
+    // them with the fields on the page.
+    Assert.IsTrue("Sparkles should have been created, with all attributes intact", unicornConfirmationPage.exists(sparkles));</code>
 <code class=python># The exists() method from UnicornConfirmationPage will take the Sparkles
 # object--a specification of the attributes you want to see, and compare
 # them with the fields on the page.
@@ -383,11 +413,99 @@ assert unicorn_confirmation_page.exists(sparkles), "Sparkles should have been cr
 
 <h2>Types of testing</h2>
 
-<p>TODO: Add paragraphs about acceptance testing, performance testing,
- load testing, regression testing, test driven development, and/or
- behavior-driven development (JBehave, Capybara, & Robot Framework),
- with how they relate to Selenium.
+<h3>Acceptance testing</h3>
+<p>This type of test is done in order to determine if a product's
+   feature matches it's requirements. 
+   This generally involve the customer's feedback or specification.</p>
+<p>For web applications, the automation of this testing can be done
+   directly with Selenium by simulating a user expected behavior in them.
+   This simulation could be done by record/playback or through the
+   different supported languages as explained in this documentation.</p>
+<p>Note: Acceptance testing is a subtype of <b>functional testing</b>,
+   which some people might also refer to.
+</p>
 
+<h3>Functional testing</h3>
+<p>This type of test is done in order to determine if a product's
+  feature functions properly, without issues.</p>
+<p>This generally include: the tests work without errors 
+  (404, exceptions...), in an usable way (right redirections),
+    in an accessible way and matching it's specifications
+     (see <b>acceptance testing</b> above).</p>
+<p>For web applications, the automation of this testing can be
+   done directly with Selenium by simulating expected returns.
+   This simulation could be done by record/playback or through
+   the different supported languages as explained in this documentation.</p>
+
+<h3>Performance testing</h3>
+<p>As its name indicates, performance tests are done in order
+   to measure how well an application is performing.</p>
+<p>There are two main sub-types for performance testing:</p>
+
+<h4>Load testing</h4>
+<p> Load testing is done in order to verify how well the 
+  application works under different defined loads 
+  (usually a particular number of users connected at once). 
+<h4> Stress testing </h4>
+<p> Stress testing is done in order to verify how well the
+   application works under stress (or above the maximum supported load). </p>
+<p>Generally, performance tests are done by executing a 
+  number of Selenium written tests simulating different users 
+  hitting a particular function on the web app and 
+  retrieving some meaningful measurements. 
+  This is generally done by other tools that retrieve the metrics.
+  One such tools is <b>JMeter</b>.
+</p>
+<p>For a web application, details to measure include:
+   throughput, latency, data loss, individual component loading times... </p>
+<p>Note: All browsers have a performance tab in their
+   developers' tools section (accessible by pressing F12)</p>
+<p>Note 2: is a subtype of <b>non-functional testing</b>
+   as this is generally measured per system and not per function/feature.</p>
+
+<h3>Regression testing</h3>
+<p>This testing is generally done after a change, fix or feature addition. 
+In order to ensure that the change has not broken any of the existing functionality, 
+some already executed tests are executed again. 
+The set of re-executed test can be full or partial
+ and can include several different types, depending
+  on the application and development team.</p>
+
+<h3>Test driven development (TDD)</h3>
+<p>Rather than a test type per se, TDD is a iterative
+   development methodology in which tests drive the design of a feature.
+Each cycle starts by creating a set of unit tests that
+ the feature should pass (which should fail their first time executed).
+After this, development takes place in order to make the tests pass. 
+The tests are executed again starting another cycle 
+and this process continues until all tests are passing.</p>
+<p>This aims to speed up the development of an application
+   based on the fact that defects are less costly the earlier they are found.</p>
+
+<h3>Behavior-driven development (BDD)</h3>
+<p>BDD is also an iterative development methodology
+   based on above (TDD) in which the goal is to involve
+    all the parties in the development of an application.</p>
+<p>Each cycle starts by creating some specification 
+  (which should fail). Then create the failing unit 
+  tests (which should also fail) and then create the development. 
+  This cycle is repeated until all type of tests are passing.</p>
+<p>In order to do so, a specification language is 
+  used. It should be understandable by all parties and 
+  simple, standard and explicit. 
+  Most tools use <b>Gherkin</b> as this language.</p>
+<p>The goal is to be able to detect even more errors
+   than TDD by targeting potential acceptance errors
+    too and make communication between parties smoother.</p>
+<p>A set of tools are currently available in order 
+  to write the specifications and match them with code functions,
+   such as <b>Cucumber</b> or <b>SpecFlow.</b> </p>
+<p>
+  A set of tools are built on top of Selenium to make this process
+  even faster by directly transform the BDD specifications into 
+  executable code.
+  Some of these are: <b>JBehave, Capybara and Robot Framework</b>.
+</p>
 
 <h2>About this documentation</h2>
 
