--- a/start.html
+++ b/start.html
@@ -167,7 +167,8 @@ one search:
 <pre>
   <code class=java>driver.findElement(By.cssSelector("#cheese #cheddar"));</code>
   <code class=python>cheddar = driver.find_element_by_css_selector("#cheese #cheddar")</code>
-  <code class=cs>cheddar = driver.FindElement(By.CssSelector("#cheese #cheddar"));</code>			
+  <code class=cs>cheddar = driver.FindElement(By.CssSelector("#cheese #cheddar"));</code>
+  <code class=javascript>const cheddar = await driver.findElement(By.css('#cheese #cheddar'));</code>
 </pre>
 
 
