--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="0; url=https://seleniumhq.github.io/docs/site/">
+        <meta http-equiv="refresh" content="0; url=https://seleniumhq.github.io/docs/site/en">
         <script type="text/javascript">
-            window.location.href = "https://seleniumhq.github.io/docs/site/"
+            window.location.href = "https://seleniumhq.github.io/docs/site/en"
         </script>
         <title>Page Redirection - Selenium Docs</title>
     </head>
     <body>
         <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
         If you are not redirected automatically, follow this 
-        <a href='https://seleniumhq.github.io/docs/site/'>link to the Selenium Docs</a>.
+        <a href='https://seleniumhq.github.io/docs/site/en'>link to the Selenium Docs</a>.
     </body>
 </html>
